objects/Training__c.object
<CustomObject>
    <fields>
        <fullName>Account_ID__c</fullName>
        <formula>Account__r.Id</formula>
        <label>Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Implementation_Date__c</fullName>
        <formula>Account__r.Implementation_Date__c</formula>
        <inlineHelpText>Pulled from the related Account. The date of the last full install that was completed.</inlineHelpText>
        <label>Account Implementation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Location__c</fullName>
        <formula>Account__r.ShippingStreet &amp; BR() &amp;
Account__r.ShippingCity &amp; &quot;, &quot; &amp; Account__r.ShippingState &amp; &quot;  &quot; &amp; Account__r.ShippingPostalCode &amp; BR() &amp;
Account__r.ShippingCountry</formula>
        <inlineHelpText>Formula pulling from the Account&apos;s shipping address.</inlineHelpText>
        <label>Account Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <formula>Account__r.AccountNumber</formula>
        <label>Vin Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_State__c</fullName>
        <description>Used for views and reports.</description>
        <formula>Account__r.ShippingState</formula>
        <label>Account State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Trainings</relationshipLabel>
        <relationshipName>Trainings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Airport_Distance__c</fullName>
        <inlineHelpText>in miles</inlineHelpText>
        <label>Airport Distance</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assigned_Trainer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The lead trainer in cases where there is no group lead. Is also the mentor if there are any mentees.</inlineHelpText>
        <label>Assigned Trainer</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Trainings</relationshipLabel>
        <relationshipName>Trainings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Block_Number__c</fullName>
        <inlineHelpText>Which block of training dates is this, out of the Total Number of Blocks</inlineHelpText>
        <label>Block Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Blocks_Generated__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Updated by Flow when blocks are generated from a Parent Shell.</inlineHelpText>
        <label>Blocks Generated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Canceled_Date__c</fullName>
        <inlineHelpText>Captures the date this training was canceled</inlineHelpText>
        <label>Canceled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cancellation_Fee__c</fullName>
        <description>cancellation fee field for travel team</description>
        <label>Cancellation Fee</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Confirmed_Training_End__c</fullName>
        <description>Background field. Not on page layout, but value is replicated in formula field &apos;Training End&apos;. This forces user to use the &apos;Set Dates&apos; button instead of changing the fields directly.</description>
        <label>Training End BG</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Confirmed_Training_Start__c</fullName>
        <description>Background field. Not on page layout, but value is replicated in formula field &apos;Training Start&apos;. This forces user to use the &apos;Set Dates&apos; button instead of changing the fields directly.</description>
        <label>Training Start BG</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Conversion_Type__c</fullName>
        <formula>TEXT(Account__r.Conversion_Type__c)</formula>
        <label>Conversion Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Exception_Notes__c</fullName>
        <inlineHelpText>If you are filling in proposed costs, please note why here.</inlineHelpText>
        <label>Cost Exception Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Current_Desking_Version__c</fullName>
        <description>Used by Desking 3.0 UTS training tracking.</description>
        <formula>TEXT(Account__r.Current_Desking_Version__c)</formula>
        <label>Current Desking Version</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cut_Off_Date__c</fullName>
        <formula>(Confirmed_Training_Start__c +
(6 - 
   MOD(
      Confirmed_Training_Start__c -DATE(1900,1,6), 
      7
      )
   )
) -14</formula>
        <inlineHelpText>refers to the scheduling of training</inlineHelpText>
        <label>Cut-Off Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DMS_System__c</fullName>
        <formula>TEXT(Account__r.DMS_System__c)</formula>
        <inlineHelpText>Formula pulling from the Account&apos;s DMS System field.</inlineHelpText>
        <label>DMS System</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Override__c</fullName>
        <inlineHelpText>If this field has anything in it, its month and year will override what goes in the Training Name field.</inlineHelpText>
        <label>Date Override</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Desking_Version_when_Created__c</fullName>
        <description>Used by Desking 3.0 Up-to-Speed trainings only.</description>
        <label>Desking Version when Training Created</label>
        <picklist>
            <picklistValues>
                <fullName>Legacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for Desking Trainings.</description>
        <inlineHelpText>Check this if the customer needs more training after this one has been completed.</inlineHelpText>
        <label>Follow-Up Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>General_Notes__c</fullName>
        <inlineHelpText>A general use notes field</inlineHelpText>
        <label>General Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Generated_by_Flow__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set by Flow. Used by Validation Rule to prevent creation of records from scratch.</description>
        <label>Generated by Flow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Group_Lead_Trainer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>In cases where an auto group is being trained, who is the lead in charge of the trip</inlineHelpText>
        <label>Group Lead Trainer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Trainings4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hotel_Distance__c</fullName>
        <inlineHelpText>in miles</inlineHelpText>
        <label>Hotel Distance</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Implementation_Manager__c</fullName>
        <formula>Related_Project__r.Owner:User.User_Full_Name__c</formula>
        <inlineHelpText>Also known as Project Owner!</inlineHelpText>
        <label>Implementation Consultant</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Notes__c</fullName>
        <formula>Related_Opportunity__r.We_Owe__c</formula>
        <inlineHelpText>Formula pulling from the related opportunity</inlineHelpText>
        <label>Implementation Notes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incidental_Expenses__c</fullName>
        <defaultValue>100</defaultValue>
        <inlineHelpText>Fixed at $100</inlineHelpText>
        <label>Incidental Expenses</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Internet_Access_Present__c</fullName>
        <inlineHelpText>Obtain this information from the dealer</inlineHelpText>
        <label>Internet Access Present</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Block_in_Series__c</fullName>
        <description>Used by Flow to determine if this is the last block in an ongoing series. Also used by reports to show active series that have not been renewed.</description>
        <formula>IF(
   !ISPICKVAL(Training_Type__c,&quot;Ongoing&quot;),
   FALSE,
   IF(
      Block_Number__c = Total_Number_of_Blocks__c,
      TRUE,
      FALSE
   )
)</formula>
        <label>Last Block in Series</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Generated_Block__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Set by flow, indicates this was the last block generated. To be used by automation.</inlineHelpText>
        <label>Last Generated Block</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Manuals_Delivered__c</fullName>
        <inlineHelpText>The date that training manuals were delivered to the dealer for this training, if any.</inlineHelpText>
        <label>Manuals Delivered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Manuals_Ordered__c</fullName>
        <inlineHelpText>The date that manuals were ordered for this training, if any.</inlineHelpText>
        <label>Manuals Ordered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Manuals_Progress__c</fullName>
        <description>Used by reporting to show status of any pertinent training manuals order on this Training.</description>
        <formula>IF(
   !ISPICKVAL(Manuals__c,&quot;Yes&quot;),
   &quot;N/A&quot;,
   IF(
      !ISBLANK(Manuals_Ordered__c) &amp;&amp; !ISBLANK(Manuals_Shipped__c) &amp;&amp; !ISBLANK(Manuals_Delivered__c),
      &quot;Delivered&quot;,
      IF(
         !ISBLANK(Manuals_Ordered__c) &amp;&amp; !ISBLANK(Manuals_Shipped__c),
         &quot;Shipped&quot;,
         IF(
            !ISBLANK(Manuals_Ordered__c),
            &quot;Ordered&quot;,
            &quot;Not Ordered&quot;
         )
      )
   )
)</formula>
        <label>Manuals Progress</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manuals_Shipped_By__c</fullName>
        <label>Manuals Shipped By</label>
        <picklist>
            <picklistValues>
                <fullName>FedEx</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USPS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Manuals_Shipped__c</fullName>
        <inlineHelpText>The date that training manuals were shipped for this training, if any.</inlineHelpText>
        <label>Manuals Shipped</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Manuals_Tracking_Number__c</fullName>
        <description>The tracking number for the manuals shipment that is going out to the dealer.</description>
        <label>Manuals Tracking Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manuals__c</fullName>
        <label>Manuals</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mentee_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Enter the name of any trainer who is being mentored on this training.</inlineHelpText>
        <label>Mentee 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Trainings3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mentee_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Enter the name of any trainer who is being mentored on this training.</inlineHelpText>
        <label>Mentee 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Trainings5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mileage_Information__c</fullName>
        <inlineHelpText>Please list all the potential mileages from various point-to-point</inlineHelpText>
        <label>Mileage Information</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>More_Ongoing_Generated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set by Flow when more ongoing is generated from this Training set. Used by Reports to determine if an ongoing training set has been renewed.</description>
        <inlineHelpText>Set by Flow when more ongoing is generated from this Training set. Used by Reports to determine if an ongoing training set has been renewed.</inlineHelpText>
        <label>More Ongoing Generated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nearest_Airport__c</fullName>
        <label>Nearest Airport</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_Access_Keys_Passwords_IP_Addresses__c</fullName>
        <label>Net Access Keys/Passwords/IP Addresses</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Not_Needed_Confirmed_On__c</fullName>
        <description>Date dealer told us that they did not require training. Used by Vin</description>
        <inlineHelpText>Set by workflow. do not edit this field. used for reporting only</inlineHelpText>
        <label>Not Needed Confirmed On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_of_Days_This_Training__c</fullName>
        <inlineHelpText>Applies to this training only. Not for ongoing shells.</inlineHelpText>
        <label>Number of Days This Training</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PM_Email__c</fullName>
        <description>Set by system workflow.</description>
        <label>PM Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Parent_Training_Shell__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Training Shell</label>
        <referenceTo>Training__c</referenceTo>
        <relationshipLabel>Trainings</relationshipLabel>
        <relationshipName>Trainings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Per_Diem__c</fullName>
        <label>Per Diem</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Performance_Manager__c</fullName>
        <description>Not in page layouts, but present for reporting and email templates.</description>
        <formula>Account__r.VinPro2__r.User_Full_Name__c</formula>
        <label>Performance Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Products_to_Be_Discussed__c</fullName>
        <label>Products to Be Discussed</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Project_Recurring_Revenue__c</fullName>
        <formula>Related_Project__r.Project_Value_2__c</formula>
        <inlineHelpText>Formula pulling from the Related Project&apos;s Project Recurring Revenue field.</inlineHelpText>
        <label>Project Recurring Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project_Type__c</fullName>
        <formula>Related_Project__r.Project_Type__c</formula>
        <inlineHelpText>Pulls from the &apos;Project Type&apos; field on the Related Project.</inlineHelpText>
        <label>Project Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Projector_That_Can_Display_PC_Screen__c</fullName>
        <inlineHelpText>Obtain this information from the dealer</inlineHelpText>
        <label>Projector That Can Display PC Screen</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Proposed_Air_Cost__c</fullName>
        <label>Air Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Proposed_Hotel_Cost__c</fullName>
        <label>Hotel Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Proposed_Rental_Car_Cost__c</fullName>
        <label>Rental Car Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Proposed_Transportation_Cost__c</fullName>
        <inlineHelpText>Proposed cost of shuttle/taxi/other transport arrangements for inhouse visits.</inlineHelpText>
        <label>Transportation Cost</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reason_for_Push_Notes__c</fullName>
        <label>Reason for Push Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reason_for_Push__c</fullName>
        <inlineHelpText>Why a training pushed dates so we can run a report and better address the issues for the dealer.</inlineHelpText>
        <label>Reason for Push</label>
        <picklist>
            <picklistValues>
                <fullName>Implementation Issues / Setup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer requested change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer not ready for training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recent_Cancellation__c</fullName>
        <description>Used by Flow to determine if this Training was canceled within the last 7 days.</description>
        <formula>IF(
   Canceled_Date__c + 7 &gt; TODAY(),
   TRUE,
   FALSE
)</formula>
        <label>Recent Cancellation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recommended_Local_Hotel__c</fullName>
        <inlineHelpText>Ask the dealer</inlineHelpText>
        <label>Recommended Local Hotel</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Trainings</relationshipLabel>
        <relationshipName>Trainings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_POA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related POA</label>
        <referenceTo>POA__c</referenceTo>
        <relationshipLabel>Trainings</relationshipLabel>
        <relationshipName>Trainings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Trainings</relationshipLabel>
        <relationshipName>Trainings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Project</label>
        <referenceTo>SFDC_520_Quote__c</referenceTo>
        <relationshipLabel>Trainings</relationshipLabel>
        <relationshipName>Trainings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requested_Combined_Training__c</fullName>
        <inlineHelpText>Did the dealer ask to have more than one rooftop training at once?</inlineHelpText>
        <label>Requested Combined Training</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Room_for_10_Students_Plus_Trainers__c</fullName>
        <inlineHelpText>Obtain this information from the dealer</inlineHelpText>
        <label>Room for 10 Students Plus Trainers?</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Scheduled_Training_Time__c</fullName>
        <description>Used by Desking 3.0 UTS training. Just needed a single date/time field instead of multiple date fields.</description>
        <label>Scheduled Training Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Screen_or_Wall_for_Projection__c</fullName>
        <inlineHelpText>Obtain this information from the dealer</inlineHelpText>
        <label>Screen or Wall for Projection</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Shipping_Contact_Phone__c</fullName>
        <description>Used by email template for submitting manual orders</description>
        <formula>IF(
   !ISBLANK(Shipping_Contact__c),
   Shipping_Contact__r.Phone,
   Account__r.Phone 
)</formula>
        <label>Shipping Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The contact at the dealership or dealer group for coordination of manual shipment/delivery.</inlineHelpText>
        <label>Shipping Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Trainings (Shipping Contact)</relationshipLabel>
        <relationshipName>Trainings3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>No Dates</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Ongoing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proposed Dates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmed Dates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel Purchased</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Frozen</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Suspected_Reschedule__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Marked by automation as being suspected of being a reschedule; another training has been canceled within the past 7 days.</inlineHelpText>
        <label>Suspected Reschedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>System_Requirement_Notes__c</fullName>
        <label>System Requirement Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Blocks__c</fullName>
        <inlineHelpText>How many trips are we taking to the dealer on this ongoing purchase</inlineHelpText>
        <label>Total Number of Blocks</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Users__c</fullName>
        <inlineHelpText>Enter the # Admins, # Managers, # Salespeople-Breakdown of users for the current install-input by the Implementation Manager-upon input Project Piece for manuals triggered</inlineHelpText>
        <label>Total Number of Users/Attendees</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Total_Ongoing_Days__c</fullName>
        <inlineHelpText>The number of days that was purchased for Ongoing Training. Shells only.</inlineHelpText>
        <label>Total Ongoing Days</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Travel_Cost__c</fullName>
        <formula>IF(
   RecordType.Name = &quot;Travel&quot;,
   IF(
      Proposed_Air_Cost__c=0 &amp;&amp; Proposed_Hotel_Cost__c=0 &amp;&amp; Proposed_Rental_Car_Cost__c=0 &amp;&amp; Per_Diem__c=0,
      IF(
         CreatedDate &gt;= DATETIMEVALUE(DATE(2014,2,11)),
         CASE(Number_of_Days_This_Training__c,
            1,1099.00,
            2,1299.00,
            3,1499.00,
            4,1599.00,
            5,1699.00,
            0),
         CASE(Number_of_Days_This_Training__c,
            1,1299.00,
            2,1499.00,
            3,1699.00,
            4,1899.00,
            0)
      ),
      Proposed_Air_Cost__c + Proposed_Hotel_Cost__c + Proposed_Rental_Car_Cost__c + Per_Diem__c + Incidental_Expenses__c
   ),
   IF(
      RecordType.Name = &quot;Inhouse&quot;,
      Proposed_Hotel_Cost__c + Proposed_Transportation_Cost__c + Incidental_Expenses__c,
      0
   )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Travel Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trainer_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trainer 2</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Trainings (Trainer 2)</relationshipLabel>
        <relationshipName>Trainings1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Trainer_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Virtual Trainer</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Trainings (Trainer 3)</relationshipLabel>
        <relationshipName>Trainings2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Trainer_Expenses_Submitted__c</fullName>
        <label>Trainer Expenses Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Training_Completed__c</fullName>
        <inlineHelpText>Trainer must fill this in when the training is completed</inlineHelpText>
        <label>Training Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Training_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Training Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Trainings</relationshipLabel>
        <relationshipName>Trainings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Training_Dates_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Training Dates Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Training_End_formula__c</fullName>
        <formula>Confirmed_Training_End__c</formula>
        <inlineHelpText>Set the value of this field by clicking the &apos;Set Dates&apos; button.</inlineHelpText>
        <label>Training End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Training_Expenses_Paid_by_Dealer__c</fullName>
        <label>Travel Expenses Paid by Dealer</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Training_Notes_from_Project__c</fullName>
        <formula>Related_Project__r.Training_Notes__c</formula>
        <inlineHelpText>Formula that updates directly from the Training Notes field on the Related Project.</inlineHelpText>
        <label>Training Notes from Project</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Push__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If training is pushed more than 14 days past due date, the training team will check this box and notate in the notes field.</description>
        <inlineHelpText>Check this is training is pushed more than 14 days past the due date.</inlineHelpText>
        <label>Training Push</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Training_Questionnaire_Completed_By__c</fullName>
        <inlineHelpText>Updated by ClickTools when new Training Questionnaire is submitted.</inlineHelpText>
        <label>Training Questionnaire Completed By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Questionnaire_Link_for_Merging__c</fullName>
        <description>Used for merge fields. Not on page layouts.</description>
        <formula>&quot;http://www.clicktools.com/survey?iv=skmx6wnumks6&amp;q1=&quot; &amp; Id</formula>
        <label>Training Questionnaire Link for Merging</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Start_Formula__c</fullName>
        <formula>Confirmed_Training_Start__c</formula>
        <inlineHelpText>Set the value of this field by clicking the &apos;Set Dates&apos; button.</inlineHelpText>
        <label>Training Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Training_Type__c</fullName>
        <label>Training Type</label>
        <picklist>
            <picklistValues>
                <fullName>Conversion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desking - Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desking - Upgrade - Follow up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desking - Validation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Install Follow-Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Install</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ongoing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requested Heat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requested Retrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upsell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Virtual Classroom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Virtual Consultation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workshop</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Travel_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Travel Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Trainings (Travel Contact)</relationshipLabel>
        <relationshipName>Trainings1</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>